Fix Main and Main-sidebar Overflow

--- a/styles.css
+++ b/styles.css
@@ -74,8 +74,8 @@ select {
 
 /* LAYOUT */
 body {
-  height: 100%;
-  width: 100%;
+  min-height: 100vh;
+
   display: grid;
   grid-template-columns: minmax(300px, 1fr) repeat(3, minmax(min-content, 1fr)) 300px;
   grid-template-rows: repeat(5, 1fr);
@@ -128,6 +128,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 16px;
+  overflow: scroll;
 }
 
 .main-sidebar {
@@ -137,6 +138,7 @@ body {
   flex-direction: column;
   padding: 16px;
   gap: 16px;
+  overflow-y: scroll;
 }
 
 /* Children */
